# zoltag

./: .dev-pids  .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  COMPONENT_EXTRACTION_PLAN.md  CURATE_EXTRACTION_PLAN.md  Dockerfile  FIXES_AND_REFACTORING_SESSION.md  IMAGE_FILTER_PANEL_MIGRATION.md  Makefile  PEOPLE_TAGGING_PHASE1_COMPLETED.md  PHASE_1_FINAL_STATUS.md  PHASE_2_COMPLETE.md  PHASE_2_HANDLER_FACTORIES.md  PHASE_2_PROGRESS.md  PHASE_2_SUMMARY.md  PHASE_3_COMPONENT_EXTRACTION_PROGRESS.md  README.md  REFACTORING_VERIFICATION.md  SEARCH_TAB_EXTRACTION_PLAN.md  SUPABASE_INTEGRATION_COMPLETE.md  SUPABASE_SETUP.md  TESTING_GUIDE.md  alembic.ini  check_sentencepiece.py  cloudbuild-model.yaml  cloudbuild.yaml  continue-config-agents.yaml  desktop_app.py  fix_user_account.py  nohup.out  package-lock.json  package.json  photocat.code-workspace  pyproject.toml  setup-continue-agents.sh  setup-locations.md  tailwind.config.js  (+4 more)
.continue/rules/: README.md  eslint-rules.md  file-size-modular.md  image-rendering-pattern.md  lit-light-dom.md  state-controllers.md  token-efficiency.md
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 202601111700_add_photo_lists.py  202601160100_migrate_tags_to_machine_tags.py  202601171400_add_image_metadata_created_at.py  202601171500_backfill_image_metadata_exif_fields.py  202601200800_normalize_tagging_phase1_add_fks.py  202601200900_normalize_tagging_phase2_backfill_fks.py  202601201000_normalize_tagging_phase3_add_not_null.py  202601201100_normalize_tagging_phase4_drop_old_cols.py  202601230100_add_people_tagging_schema.py  202601311200_add_permatag_stats_indexes.py  202601311230_add_machine_tag_stats_indexes.py  202601311500_add_keyword_lower_indexes.py  202601311530_add_image_metadata_dropbox_path_index.py  202601311600_add_dropbox_folder_expression_index.py  202602041230_add_keyword_category_is_attribution.py  202602041315_remove_person_category.py  202602041430_add_keyword_category_slug.py  202602071200_add_asset_storage_tables.py  202602081000_simplify_asset_storage_schema.py  202602081130_add_image_metadata_asset_id_bridge.py  202602081230_add_thumbnail_migration_audit_table.py  202602081330_add_asset_id_to_photo_list_items.py  202602081430_validate_asset_bridge_foreign_keys.py  202602081530_add_asset_id_to_tag_tables.py  202602081630_validate_tag_table_asset_fks.py  202602081730_add_asset_id_to_image_embeddings.py  202602081830_enforce_asset_id_strictness.py  202602081930_drop_legacy_image_metadata_storage_columns.py  202602082000_enforce_asset_id_on_tags_and_lists.py  202602082030_enforce_tag_image_asset_consistency.py  202602082130_drop_tag_image_id_columns.py  202602082230_add_permatag_asset_filter_indexes.py  202602082300_add_photo_creation_order_index.py  202602082310_add_processed_order_index.py  202602082320_drop_image_embeddings_image_id.py  202602082330_drop_photo_list_items_photo_id.py  202602091015_add_machine_tags_model_lookup_index.py  202602091200_add_machine_tags_tenant_type_asset_index.py  202602101215_add_image_embeddings_hash_expr_index.py  202602111130_add_editor_tenant_role.py  (+60 more)
docs/: APPLICATION_CODE_REFACTORING_COMPLETE.md  AUTH_AND_REFACTORING_ROADMAP.md  CLOUD_SQL_SETUP.md  COMPONENT_EXTRACTION_PLAN.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DIRECT_UPLOAD_DESIGN.md  FACE_RECOGNITION_DESIGN.md  FACE_RECOGNITION_PROGRESS.md  IMAGE_RENDERING_PATTERN.md  IMPLEMENTATION_COMPLETE.md  JOB_QUEUE_ARCHITECTURE_DESIGN.md  LLM_INTEGRATION.md  LOCAL_APP_DESIGN.md  MIGRATION3_DATABASE_MIGRATIONS.md  MIGRATION3_PHASE2_2_BUG_FIXES.md  MIGRATION3_PHASE2_2_QUERY_OPTIMIZATION.md  MIGRATION3_PHASE2_3_COMPLETION.md  MIGRATION3_PHASE2_BENCHMARKING.md  MIGRATION3_PHASE2_PROGRESS.md  MIGRATION3_REFACTORING_ROADMAP.md  MIGRATION3_REVIEW_RESPONSES.md  MIGRATION_CHECKLIST.md  MIGRATION_SUCCESS.md  MODULARIZATION_PLAN.md  ORM_RELATIONSHIPS.md  PEOPLE_ARCHITECTURE_QUICK_REFERENCE.md  PEOPLE_TAGGING_ARCHITECTURE.md  PEOPLE_TAGGING_COMPLETE.md  PEOPLE_TAGGING_IMPLEMENTATION.md  PEOPLE_TAGGING_INTEGRATION.md  PEOPLE_TAGGING_QUICK_START.md  PEOPLE_TAGGING_STATUS.md  PEOPLE_TAGGING_UI_GUIDE.md  PERMISSIONS_RBAC_DESIGN.md  PERMISSIONS_RBAC_IMPLEMENTATION_STATUS.md  PROVIDER_CONFIG_TABLE_MIGRATION_DESIGN.md  REFACTORING_ANALYSIS.md  REFACTORING_PROGRESS.md  REFACTORING_ROADMAP.md  (+17 more)
frontend/: admin.html  admin.js  index.html  main.js
frontend/components/: activity-audit.js  admin-app.js  admin-database-monitor.js  admin-dropbox-setup.js  admin-form-group.js  admin-jobs.js  admin-keyword-thresholds.js  admin-modal.js  admin-reviews-panel.js  admin-storage-setup.js  admin-tabs.js  admin-tenant-editor.js  admin-tenant-list.js  admin-tenant-settings.js  admin-users.js  app-header.js  assets-admin.js  auth-callback.js  auth-guard.js  cli-commands.js  curate-ai-tagfinder2-tab.js  curate-ai-tagger.js  curate-audit-tab.js  curate-explore-tab.js  (+44 more)
scripts/: audit_asset_object_existence.py  audit_thumbnail_migration.py  backfill_assets.py  backfill_delete_duplicate_provider_assets.py  backfill_dropbox_asset_source_keys_to_ids.py  backfill_image_embeddings_asset_id.py  backfill_image_metadata_asset_id.py  backfill_photo_list_items_asset_id.py  backfill_tag_tables_asset_id.py  backfill_tenant_provider_integrations.py  backup_supabase.sh  cleanup_gcr_images.sh  configure_sentinel_workers.sh  copy_assets_to_new_key_conventions.py  copy_keywords.sh  db_pressure_snapshot.py  migrate_tenant_data.py  reset_cloud_db.sh  setup_cdn.sh  setup_cloud_sql_dev.sh  setup_shared_buckets.py  setup_shared_buckets.sh  setup_tenant_buckets.py  start_cloud_sql_proxy.sh  verify_video_thumbnail_rollout.py
tests/: conftest.py  test_activity_events.py  test_admin_integrations_scope_guard.py  test_auth_invitation_auto_claim.py  test_config.py  test_config_manager_keywords.py  test_face_recognition_audit_mode.py  test_face_recognition_service.py  test_image.py  test_job_profiles.py  test_machine_tag_types.py  test_machine_tags.py  test_people_api.py  test_provider_integrations.py  test_tagging.py  test_tenant.py  test_tenant_access_security.py
(+259 files in other folders)
